resources/style.css
/* ... */
@media only screen and (min-width: 992px) {
    .grid-cols-lg-1 { grid-template-columns: repeat(1, minmax(0, 1fr)) }
    .grid-cols-lg-2 { grid-template-columns: repeat(2, minmax(0, 1fr)) }
    .grid-cols-lg-3 { grid-template-columns: repeat(3, minmax(0, 1fr)) }
    .grid-cols-lg-4 { grid-template-columns: repeat(4, minmax(0, 1fr)) }
    .grid-cols-lg-5 { grid-template-columns: repeat(5, minmax(0, 1fr)) }
    .grid-cols-lg-6 { grid-template-columns: repeat(6, minmax(0, 1fr)) }
    .grid-cols-lg-7 { grid-template-columns: repeat(7, minmax(0, 1fr)) }
    .grid-cols-lg-8 { grid-template-columns: repeat(8, minmax(0, 1fr)) }
    .grid-cols-lg-9 { grid-template-columns: repeat(9, minmax(0, 1fr)) }
    .grid-cols-lg-10 { grid-template-columns: repeat(10, minmax(0, 1fr)) }
    .grid-cols-lg-11 { grid-template-columns: repeat(11, minmax(0, 1fr)) }
    .grid-cols-lg-12 { grid-template-columns: repeat(12, minmax(0, 1fr)) }
    .grid-span-lg-1 {grid-column: span 1 }
    .grid-span-lg-2 {grid-column: span 2 }
    .grid-span-lg-3 {grid-column: span 3 }
    .grid-span-lg-4 {grid-column: span 4 }
    .grid-span-lg-5 {grid-column: span 5 }
    .grid-span-lg-6 {grid-column: span 6 }
    .grid-span-lg-7 {grid-column: span 7 }
    .grid-span-lg-8 {grid-column: span 8 }
    .grid-span-lg-9 {grid-column: span 9 }
    .grid-span-lg-10 {grid-column: span 10 }
    .grid-span-lg-11 {grid-column: span 11 }
    .grid-span-lg-12 {grid-column: span 12 }
}

@media only screen and (min-width: 1200px) {
    .grid-cols-xl-1 { grid-template-columns: repeat(1, minmax(0, 1fr)) }
    .grid-cols-xl-2 { grid-template-columns: repeat(2, minmax(0, 1fr)) }
    .grid-cols-xl-3 { grid-template-columns: repeat(3, minmax(0, 1fr)) }
    .grid-cols-xl-4 { grid-template-columns: repeat(4, minmax(0, 1fr)) }
    .grid-cols-xl-5 { grid-template-columns: repeat(5, minmax(0, 1fr)) }
    .grid-cols-xl-6 { grid-template-columns: repeat(6, minmax(0, 1fr)) }
    .grid-cols-xl-7 { grid-template-columns: repeat(7, minmax(0, 1fr)) }
    .grid-cols-xl-8 { grid-template-columns: repeat(8, minmax(0, 1fr)) }
    .grid-cols-xl-9 { grid-template-columns: repeat(9, minmax(0, 1fr)) }
    .grid-cols-xl-10 { grid-template-columns: repeat(10, minmax(0, 1fr)) }
    .grid-cols-xl-11 { grid-template-columns: repeat(11, minmax(0, 1fr)) }
    .grid-cols-xl-12 { grid-template-columns: repeat(12, minmax(0, 1fr)) }
    .grid-span-xl-1 {grid-column: span 1 }
    .grid-span-xl-2 {grid-column: span 2 }
    .grid-span-xl-3 {grid-column: span 3 }
    .grid-span-xl-4 {grid-column: span 4 }
    .grid-span-xl-5 {grid-column: span 5 }
    .grid-span-xl-6 {grid-column: span 6 }
    .grid-span-xl-7 {grid-column: span 7 }
    .grid-span-xl-8 {grid-column: span 8 }
    .grid-span-xl-9 {grid-column: span 9 }
    .grid-span-xl-10 {grid-column: span 10 }
    .grid-span-xl-11 {grid-column: span 11 }
    .grid-span-xl-12 {grid-column: span 12 }
}

@media only screen and (min-width: 1400px) {
    .grid-cols-xxl-1 { grid-template-columns: repeat(1, minmax(0, 1fr)) }
    .grid-cols-xxl-2 { grid-template-columns: repeat(2, minmax(0, 1fr)) }
    .grid-cols-xxl-3 { grid-template-columns: repeat(3, minmax(0, 1fr)) }
    .grid-cols-xxl-4 { grid-template-columns: repeat(4, minmax(0, 1fr)) }
    .grid-cols-xxl-5 { grid-template-columns: repeat(5, minmax(0, 1fr)) }
    .grid-cols-xxl-6 { grid-template-columns: repeat(6, minmax(0, 1fr)) }
    .grid-cols-xxl-7 { grid-template-columns: repeat(7, minmax(0, 1fr)) }
    .grid-cols-xxl-8 { grid-template-columns: repeat(8, minmax(0, 1fr)) }
    .grid-cols-xxl-9 { grid-template-columns: repeat(9, minmax(0, 1fr)) }
    .grid-cols-xxl-10 { grid-template-columns: repeat(10, minmax(0, 1fr)) }
    .grid-cols-xxl-11 { grid-template-columns: repeat(11, minmax(0, 1fr)) }
    .grid-cols-xxl-12 { grid-template-columns: repeat(12, minmax(0, 1fr)) }
    .grid-span-xxl-1 {grid-column: span 1 }
    .grid-span-xxl-2 {grid-column: span 2 }
    .grid-span-xxl-3 {grid-column: span 3 }
    .grid-span-xxl-4 {grid-column: span 4 }
    .grid-span-xxl-5 {grid-column: span 5 }
    .grid-span-xxl-6 {grid-column: span 6 }
    .grid-span-xxl-7 {grid-column: span 7 }
    .grid-span-xxl-8 {grid-column: span 8 }
    .grid-span-xxl-9 {grid-column: span 9 }
    .grid-span-xxl-10 {grid-column: span 10 }
    .grid-span-xxl-11 {grid-column: span 11 }
    .grid-span-xxl-12 {grid-column: span 12 }
}

/***********
*   Flex   *
***********/

.flex {
    display: flex;
    box-sizing: border-box;
    width: 100%;
    gap: var(--theme-element-spacing);
    margin-bottom: var(--theme-element-spacing);
}

.flex-wrap { flex-wrap: wrap }
.flex-end { justify-content: flex-end }
.flex-space-around { justify-content: space-around }
.flex-space-between { justify-content: space-between }

/***********************
*   Group Selections   *
***********************/

swd-router {
    display: contents;
}

[class*="grid-cols-"].no-gap, .flex.no-gap {
    gap: 0
}

[class*="grid-cols-"] > *, .flex > *, [class*="overlay-"] > * {
    margin: 0 
}

[class*="container-"] > :first-child, swd-navigation > :first-child, swd-selection > :first-child,
swd-card > :first-child, swd-card-outline > :first-child, swd-card-ghost > :first-child, swd-card-frame > :first-child {
    margin-top: 0
}

[class*="container-"] > :last-child, swd-navigation > :last-child, swd-selection > :last-child,
swd-card > :last-child, swd-card-outline > :last-child,swd-card-ghost > :last-child, swd-card-frame > :last-child {
    margin-bottom: 0
}

swd-navigation *, swd-card *, swd-card-outline *, swd-card-ghost *, swd-card-frame *, [class*="overlay-"] * { --theme-element-spacing: var(--theme-inner-element-spacing) } 

swd-navigation a, swd-select a { display: block }

swd-dialog:not([shown]), swd-dropdown-content:not([shown]) { display: none }

swd-navigation *, swd-card *, swd-selection * { --theme-primary-grey-color: var(--theme-secondary-grey-color) }

[hidden] { display: none }
/* ... */

